--- a/qemud/Makefile.am
+++ b/qemud/Makefile.am
@@ -111,6 +111,10 @@ endif
 if WITH_NETWORK
 libvirtd_LDADD += ../src/libvirt_driver_network.la
 endif
+
+if WITH_NODE_DEVICES
+libvirtd_LDADD += ../src/libvirt_driver_nodedev.la
+endif
 endif
 
 libvirtd_LDADD += ../src/libvirt.la
