Disable UML driver on mingw RPM build

--- a/mingw32-libvirt.spec.in
+++ b/mingw32-libvirt.spec.in
@@ -49,6 +49,7 @@ MinGW Windows libvirt virtualization library.
   --without-xen \
   --without-qemu \
   --without-lxc \
+  --without-uml \
   --without-openvz \
   --without-libvirtd
 make
