don't silently skip a test
* tests/Makefile.am (EXTRA_DIST): Distribute domainschemadata/.
* tests/domainschematest: Fail the test if find invocation fails.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -41,7 +41,8 @@ EXTRA_DIST =		\
 	xmlrpcserver.py	\
 	qemuxml2argvdata \
 	nodeinfodata     \
-	domainschematest
+	domainschematest \
+	domainschemadata
 
 noinst_PROGRAMS = xmlrpctest virshtest conftest \
         nodeinfotest statstest qparamtest
