--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -393,6 +393,9 @@ fi
 %endif
 
 %changelog
+* Tue Nov 25 2008 Daniel Veillard <veillard@redhat.com> - 0.5.0-1
+- release of 0.5.0
+
 * Tue Sep 23 2008 Daniel Veillard <veillard@redhat.com> - 0.4.6-1
 - release of 0.4.6
 
