Fix libnuma use to build with v1 compatability code

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -124,6 +124,8 @@ BuildRequires: lvm2
 BuildRequires: iscsi-initiator-utils
 # For disk driver
 BuildRequires: parted-devel
+# For QEMU/LXC numa info
+BuildRequires: numactl-devel
 Obsoletes: libvir
 
 # Fedora build root suckage
