--- a/configure.in
+++ b/configure.in
@@ -117,6 +117,8 @@ AC_PATH_PROG([BRCTL], [brctl], [brctl],
 	[/sbin:/usr/sbin:/usr/local/sbin:$PATH])
 AC_PATH_PROG([UDEVADM], [udevadm], [],
 	[/sbin:/usr/sbin:/usr/local/sbin:$PATH])
+AC_PATH_PROG([UDEVSETTLE], [udevsettle], [],
+	[/sbin:/usr/sbin:/usr/local/sbin:$PATH])
 
 AC_DEFINE_UNQUOTED([DNSMASQ],["$DNSMASQ"],
         [Location or name of the dnsmasq program])
@@ -125,6 +127,10 @@ AC_DEFINE_UNQUOTED([BRCTL],["$BRCTL"],
 if test -n "$UDEVADM"; then
   AC_DEFINE_UNQUOTED([UDEVADM],["$UDEVADM"],
         [Location or name of the udevadm program])
+fi
+if test -n "$UDEVSETTLE"; then
+  AC_DEFINE_UNQUOTED([UDEVSETTLE],["$UDEVSETTLE"],
+        [Location or name of the udevsettle program])
 fi
 
 dnl Specific dir for HTML output ?
