--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -249,6 +249,7 @@ LIBVIRT_0.5.0 {
 
 } LIBVIRT_0.4.5;
 
+/* no new entry point in 0.5.1 */
 /* .... define new API here using predicted next version number .... */
 
 
