Add locking for thread safety to nodedevice drivers

--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -510,6 +510,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 	virNodeDeviceDefFormat;
 	virNodeDeviceObjLock;
 	virNodeDeviceObjUnlock;
+	virNodeDeviceAssignDef;
 
 
 	/* qparams.h */
